Wed Jun 06 00:41:23 2001  George Lebl <jirka@5z.com>

	* configure.in, gui/Makefile.am: when compiling without xdmcp
	  don't compile the chooser

	* gui/Makefile.am, gui/gdmchooser.c: Use gdmwm for window management
	  and query xinerama as well.  Also do manage on doubleclick

	* daemon/choose.c, daemon/xdmcp.c: Some obvious fixes, note that
	  indirect lookup will NOT return an expired Indirect thingie. 
	  Still need to figure out where does the chooser plug in.

	* gui/gdmlogin.c, gui/gdmchooser.c: run gdmwm only when not debugging

	* daemon/slave.c, daemon/gdm.c, daemon/errorgui.[ch],
	  daemon/Makefile.am:  Deal with the hanging bugs by doing an exec
	  before running the gtk gui.  Also make the gui use GNOME to be
	  prettier.  I'm less and less sure I like this hack and it might
	  move into a separate binary, though this way it is faster as
	  gdm is already paged in.  This also fixes some i18n problems
	  with the error dialog.

Tue Jun 05 21:27:52 2001  George Lebl <jirka@5z.com>

	* daemon/slave.c: fix hanging related to centering of dialogs.

Mon Jun 04 20:45:54 2001  George Lebl <jirka@5z.com>

	* Makefile.am, configure.in, gdmconfig-security(.in), gdm.spec.in:
	  cleaned up the pam stuff ala gnome-utils

	* configure.in, accconfig.h, daemon/xdmcp.[ch], daemon/gdm.c,
	  gui/gdmconfig.(c|glade): Detect the xdmcp libs and compile
	  without xdmcp support if not found and allow selecting this
	  option ala the xinerama one.  The configurator will disable
	  the xdmcp options if they aren't compiled in

	* daemon/gdm.c, gui/gdmlogin.c, gui/gdmconfig.(c|glade): Apparently
	  5 seconds is useful for timed login so lower the minimum from 10
	  to 5

Sun Jun 03 04:55:49 2001  George Lebl <jirka@5z.com>

	* daemon/gdm.h: remove unused opcode (GDM_STOP)

	* daemon/slave.c, gui/gdmlogin.c: On GDM_QUIT the login will make
	  sure to quickly quit and in the slave we no longer kill it to
	  avoid a possible race, also try to avoid other races todo with