@@ -1,3 +1,8 @@
+Wed Jun 06 00:59:33 2001  George Lebl <jirka@5z.com>
+
+	* configure.in, gui/Makefile.am: do the conditional chooser build
+	  in a kosher way that actually works
+
 Wed Jun 06 00:41:23 2001  George Lebl <jirka@5z.com>
 
 	* configure.in, gui/Makefile.am: when compiling without xdmcp
